# PointCloudDisplayer

./: .gitignore  CMakeLists.txt  README.md  shader_config.hpp.in
pinclude/displayer/: PointCloudScene.hpp
shaders/: point_cloud.vert
src/displayer/: PointCloudScene.cpp  entry.cpp
